--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
         xxxxx
     </body>
     <a href="https://www.baidu.com">sss</a>
+    
+    <img src="360button.png" alt="Pulpit rock" width="304" height="228">
 </html>
