--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
- <title>https://hao.36000.c0n/</title> 
+ <title>楠普拉高原资料</title> 
 </head>
 <body>
 <p>
-<img src="gaoyuan.jpg" alt="Smiley face" width="1917" height="1848"></p>
+<img src="gaoyuan.jpg" alt="Smiley face" width="1905" height="1652"></p>
 
 </body>
 </html>
