--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/page.js"></script>
-	<title>首页</title>
+	<title>顺链资本</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 			<div class="head_left fl">
 				<a href="javascript:;">
 					<img class="fl" src="images/index40.png" />
-					<span class="fl">和慧资本<br />Hehui Co.</span>
+					<span class="fl">顺链资本<br />Hehui Co.</span>
 				</a>
 			</div>
 			<div class="head_right fl">
@@ -24,13 +24,13 @@
 						<a href="javascript:;"><span>首页</span></a>
 					</li>
 					<li>
-						<a href="javascript:;"><span>关于和慧</span></a>
+						<a href="javascript:;"><span>关于顺链</span></a>
 					</li>
 					<li>
 						<a href="javascript:;"><span>投资案例</span></a>
 					</li>
 					<li>
-						<a href="javascript:;"><span>和慧资讯</span></a>
+						<a href="javascript:;"><span>顺链资讯</span></a>
 					</li>
 					<li>
 						<a href="javascript:;"><span>基金产品</span></a>
@@ -60,12 +60,12 @@
 		<!--关于和慧 开始 -->
 		<div class="zindex_cont1">
 			<div class="tit">
-				<span>关于和慧</span>
+				<span>关于顺链</span>
 				<em>ABOUT US</em>
 			</div>
 			<div class="det clearFloat">
 				<div class="fon fl">
-					<p>和慧资本是在国家放开民营资本进入金融业的监管限制、中国经济持续发展、财富管理在中国会有越来越广阔的市场的背景下，由一支国内大型券商管理团队为班底，以打造中国一流并购与投资管理公司为目标而设立。我们以共赢、专业、市场化作为核心经营理念，旨在打造一个以投资能力和综合服务能力作为自身核心竞争力的资产管理平台。</p>
+					<p>顺链资本是在国家放开民营资本进入金融业的监管限制、中国经济持续发展、财富管理在中国会有越来越广阔的市场的背景下，由一支国内大型券商管理团队为班底，以打造中国一流并购与投资管理公司为目标而设立。我们以共赢、专业、市场化作为核心经营理念，旨在打造一个以投资能力和综合服务能力作为自身核心竞争力的资产管理平台。</p>
 					<div class="more"><a href="javascript:;">查看详情</a></div>
 				</div>
 				<div class="ig fr"><img src="images/index44.jpg" /></div>
