--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<!--    <div style="display: flex">-->
-<!--        <img src="./iX/iPXr_page1.jpg" mode="widthFix" style="width: 50%">-->
-<!--        <img src="./iX/iPXr_page2.jpg" mode="widthFix" style="width: 50%">-->
-<!--    </div>-->
+    <div style="display: flex">
+        <img src="./iX/iPXr_page1.jpg" mode="widthFix" style="width: 50%">
+        <img src="./iX/iPXr_page2.jpg" mode="widthFix" style="width: 50%">
+    </div>
     <div>
         <h1>联系我们</h1>
         <h1>email:844613196@qq.com</h1>
